<resources>
    <string name="app_name">Another Term Lite</string>
    <string name="action_close">Close</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_copy">Copy</string>
    <string name="action_paste">Paste</string>
    <string name="action_charset">Charset</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_favorite">New Favorite</string>
    <string name="conntype_uart">UART</string>
    <string name="msg_copied_to_clipboard">Copied to clipboard</string>
    <string name="msg_connected">Connected</string>
    <string name="msg_disconnected">Disconnected</string>
    <string name="optimized">Optimized</string>
    <string name="not_optimized">Not Optimized</string>
    <string name="hint_user">user</string>
    <string name="hint_host">host</string>
    <string name="hint_port">port</string>

    <string name="action_settings_keepalive_and_battery_optimization">Session Keep-Alive and Battery Optimization</string>
    <string name="desc_doze"><![CDATA[
        <p>If you want to keep a network connection open
        or local console applications running
        when your phone is asleep for a long time,
        turn off the battery optimization for this application
        in the Battery Optimization Settings.</p>
        <p><b>Warning: </b>Battery usage could be increased significantly.</p>
        <br/>
        <p><b>Details:</b></p>
        <ul>
            <li><a href=\"https://tamingthedroid.com/battery-optimization-doze-mode\">https://tamingthedroid.com/battery-optimization-doze-mode</a></li>
            <li><a href=\"https://developer.android.com/training/monitoring-device-state/doze-standby\">https://developer.android.com/training/monitoring-device-state/doze-standby</a></li>
        </ul>
    ]]></string>
    <string name="battery_optimization_settings">Battery Optimization Settings</string>
    <string name="action_add_fav">Add Favorite</string>
    <string name="label_name">Name</string>
    <string name="label_type">Type</string>
    <string name="new_favorite">New Favorite</string>
    <string name="edit_favorite_s">Edit Favorite `%s\'</string>
    <string name="new_favorite_from_s">New Favorite From `%s\'</string>
    <string name="number_expected">Number expected</string>
    <string name="field_must_not_be_empty">Must not be empty</string>
    <string name="there_are_active_terminals">There are active terminals</string>
    <string name="action_clone">Clone</string>
    <string name="action_terminate">Terminate</string>
    <string name="label_charset">Charset</string>
    <string name="connection_settings_editor">Connection Settings Editor</string>
    <string name="terminal_link_s">Terminal Link `%s\'</string>
    <string name="msg_saved">Saved</string>
    <string name="msg_cloned">Cloned</string>
    <string name="favorite_s_is_already_exists_replace">Favorite `%s\' is already exists. Replace?</string>
    <string name="do_you_want_to_delete_this_favorite">Do you want to delete this favorite?</string>
    <string name="msg_favorite_deleted">Favorite deleted</string>
    <string name="action_about">About</string>
    <string name="terminal_string">Terminal string</string>
    <string name="execute_">Execute:</string>
    <string name="shell">shell</string>
    <string name="keepalive_interval_">KeepAlive Interval:</string>
    <string name="time_unit_seconds">seconds</string>
    <string name="choose">Choose</string>
    <string name="msg_clipboard_does_not_contain_any_settings">Clipboard does not contain any settings</string>
    <string name="key_mapping">Key Mapping</string>
    <string name="action_add">Add</string>
    <string name="none">None</string>
    <string name="action_term_key_mapping">Key Mapping</string>
    <string name="prompt_overwrite">Overwrite?</string>
    <string name="msg_name_must_not_be_empty">Name must not be empty</string>
    <string name="license">License</string>
    <string name="conntype_local">Local Terminal</string>
    <string name="title_info">Info</string>
    <string name="desc_not_found"><![CDATA[<h1>Not Found</h1>]]></string>
    <string name="desc_local_param_execute"><![CDATA[
        <p>If the field is empty, <code>/system/bin/sh -l</code> will be executed;<br/>
        <code>/system/bin/sh -l -c &lt;command&gt;</code> otherwise.</p>
        <p>Commands:
        <ul>
        <li><clipboard>$LIB_DIR/libtermsh.so</clipboard> &#x2014; a tool to use Android
        functionality from the shell.
        Run with <code>help</code> command for
        <a href=\"info://green_green_avk.anothertermlite/termsh_man\">details</a>.</li>
        </ul></p>
        <p>Environment variables:
        <ul>
        <li><clipboard>DATA_DIR</clipboard> &#x2014; default persistent data directory</li>
        <li><clipboard>PROTECTED_DATA_DIR</clipboard> &#x2014; default device-protected persistent
        data directory (set if available)</li>
        <li><clipboard>SHARED_DATA_DIR</clipboard> &#x2014;
        directory on the primary shared/external storage device
        where the application can place persistent files it owns
        (set if available)</li>
        <li><clipboard>EXTERNAL_DATA_DIR</clipboard> &#x2014;
        an alias to <clipboard>SHARED_DATA_DIR</clipboard></li>
        <li><clipboard>PUBLIC_DATA_DIR</clipboard> &#x2014;
        the primary shared/external storage directory (set if available)</li>
        <li><clipboard>LIB_DIR</clipboard> &#x2014; native binaries path</li>
        <li><clipboard>APP_ID</clipboard> &#x2014; application id</li>
        </ul></p>
    ]]></string>
    <string name="example_local_param_execute">export TERMSH=\"$LIB_DIR/libtermsh.so\" ; cd $DATA_DIR ; sh</string>
    <string name="conntype_telnet">Telnet</string>
    <string name="title_activity_settings">Settings</string>
    <string name="label_key_map">Key Map</string>
    <string name="unit_ms">ms</string>
    <string name="unit_sp">sp</string>
    <string name="unit_dp">dp</string>
    <string name="action_settings_terminal">Terminal</string>
    <string name="msg_cannot_parse_uri">Cannot parse URI</string>
    <string name="msg_nothing_to_copy_to_clipboard">Nothing to copy to clipboard</string>
    <string name="keymap_title_s_q_not_defined_here_q">%s (not defined here)</string>
    <string name="keymap_title_default">Default</string>
    <string name="title_shell_of_s">%s Shell</string>
    <string name="title_shell_script_request_of_s">%s Shell: Script Request</string>
    <string name="title_about">About</string>
    <string name="msg_usd_serial_port_s_disconnected">USB serial port %s disconnected</string>
    <string name="msg_usd_serial_port_s_reconnected">USB serial port %s reconnected</string>
    <string name="note_p_zero_m_off_p">(0 - off)</string>
    <string name="label_cols">Cols</string>
    <string name="label_rows">Rows</string>
    <string name="action_set_terminal_size">Set size</string>
    <string name="dialog_title_set_terminal_screen_size">Terminal screen size</string>
    <string name="hint_auto">auto</string>
    <string name="hint_int_value_p_auto_p">%d (auto)</string>
    <string name="action_send_sigint">Send SIGINT</string>
    <string name="action_send_sighup">Send SIGHUP</string>
    <string name="label_screen">Screen</string>
    <string name="msg_text_is_too_large_to_be_copied_into_clipboard">It seems, the text is too large to be copied into the clipboard on this particular device.
        Possibly, some workaround will be implemented in the future.</string>
    <string name="action_help">Help</string>
</resources>
